--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
+.body{
+  font-family: Arial, Helvetica, sans-serif;
+  display: grid;
+  grid: 100px 50px 1fr / 1fr;
+}
+
+.player-title{
+  display: grid;
+  grid: 1fr/ 1fr 1fr;
+  text-align: center;
+  font-size: 50px;
+}
 
 .main-container {
   display: grid;
   grid: 1fr / repeat(2, 1fr);
+}
+
+.title {
+  font-size: 5rem;
+  font-weight: bold;
+  text-align: center;
 }
 
 .gameboard {
@@ -22,7 +40,7 @@
 }
 
 .npc-battleship{
-  
+
 }
 
 .hit {
@@ -30,5 +48,5 @@
 }
 
 .miss {
-  background: black;
+  background: grey;
 }
